update config file name

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "DelyvaX\\DelyvaServiceProvider"
+                "DelyvaX\\Delyva\\DelyvaServiceProvider"
             ]
         }
     }
