--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "\\DelyvaX\\Delyva": "src/"
+            "\\DelyvaX\\Delyva\\": "src/"
         }
     },
     "extra": {
