--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Firdausishaddin\\Delyva\\DelyvaServiceProvider"
+                "Delyvax\\Delyva\\DelyvaServiceProvider"
             ]
         }
     }
